[package]
name = "runkernel-cli-support"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
runkernel = { path = "../runkernel" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
