[package]
name = "runkernel-cli-support"
version = "0.1.0"
edition = "2021"
description = "Internal protocol support for runkernel workflow binaries"
license = "MIT"
repository = "https://github.com/Adriftdev/runkernel"
readme = "../../README.md"
keywords = ["workflow", "task-runner", "dag", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
runkernel = { version = "0.1.0", path = "../runkernel" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
