[package]
name = "runkernel-cli"
version = "0.1.1"
edition = "2021"
description = "Command-line interface for runkernel Rust-native workflows"
license = "MIT"
repository = "https://github.com/Adriftdev/runkernel"
readme = "../../README.md"
keywords = ["workflow", "task-runner", "dag", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "runkernel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
runkernel = { version = "0.1.1", path = "../runkernel" }
runkernel-cli-support = { version = "0.1.0", path = "../runkernel-cli-support" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
