[package]
name = "runkernel"
version = "0.1.0"
edition = "2021"
description = "Rust-native workflow engine for defining, inspecting, and running task graphs"
license = "MIT"
repository = "https://github.com/Adriftdev/runkernel"
readme = "../../README.md"
keywords = ["workflow", "task-runner", "dag", "automation"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".runkernel/**"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
anyhow = "1.0"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
